--- a/Data Science Tutorial.ipynb
+++ b/Data Science Tutorial.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -551,8 +551,6 @@
        "      <th>item_name</th>\n",
        "      <th>choice_description</th>\n",
        "      <th>item_price</th>\n",
-       "      <th>total_price</th>\n",
-       "      <th>item-price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -563,8 +561,6 @@
        "      <td>Izze</td>\n",
        "      <td>[Clementine]</td>\n",
        "      <td>3.39</td>\n",
-       "      <td>$3.39</td>\n",
-       "      <td>3.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -572,8 +568,6 @@
        "      <td>1</td>\n",
        "      <td>Nantucket Nectar</td>\n",
        "      <td>[Apple]</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>$3.39</td>\n",
        "      <td>3.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -583,8 +577,6 @@
        "      <td>Chicken Bowl</td>\n",
        "      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n",
        "      <td>16.98</td>\n",
-       "      <td>$16.98 $16.98</td>\n",
-       "      <td>16.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -592,8 +584,6 @@
        "      <td>1</td>\n",
        "      <td>Chicken Bowl</td>\n",
        "      <td>[Fresh Tomato Salsa (Mild), [Rice, Cheese, Sou...</td>\n",
-       "      <td>10.98</td>\n",
-       "      <td>$10.98</td>\n",
        "      <td>10.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -603,13 +593,9 @@
        "      <td>Steak Burrito</td>\n",
        "      <td>[Tomatillo Red Chili Salsa, [Fajita Vegetables...</td>\n",
        "      <td>11.75</td>\n",
-       "      <td>$11.75</td>\n",
-       "      <td>11.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -623,8 +609,6 @@
        "      <td>Steak Burrito</td>\n",
        "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Sour ...</td>\n",
        "      <td>11.75</td>\n",
-       "      <td>$11.75</td>\n",
-       "      <td>11.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4618</th>\n",
@@ -632,8 +616,6 @@
        "      <td>1</td>\n",
        "      <td>Steak Burrito</td>\n",
        "      <td>[Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...</td>\n",
-       "      <td>11.75</td>\n",
-       "      <td>$11.75</td>\n",
        "      <td>11.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -643,8 +625,6 @@
        "      <td>Chicken Salad Bowl</td>\n",
        "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
        "      <td>11.25</td>\n",
-       "      <td>$11.25</td>\n",
-       "      <td>11.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4620</th>\n",
@@ -652,8 +632,6 @@
        "      <td>1</td>\n",
        "      <td>Chicken Salad Bowl</td>\n",
        "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
-       "      <td>8.75</td>\n",
-       "      <td>$8.75</td>\n",
        "      <td>8.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -663,12 +641,10 @@
        "      <td>Chicken Salad Bowl</td>\n",
        "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
        "      <td>8.75</td>\n",
-       "      <td>$8.75</td>\n",
-       "      <td>8.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3376 rows × 7 columns</p>\n",
+       "<p>3376 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -685,36 +661,23 @@
        "4620      1834         1  Chicken Salad Bowl   \n",
        "4621      1834         1  Chicken Salad Bowl   \n",
        "\n",
-       "                                     choice_description  item_price  \\\n",
-       "1                                          [Clementine]        3.39   \n",
-       "2                                               [Apple]        3.39   \n",
-       "4     [Tomatillo-Red Chili Salsa (Hot), [Black Beans...       16.98   \n",
-       "5     [Fresh Tomato Salsa (Mild), [Rice, Cheese, Sou...       10.98   \n",
-       "7     [Tomatillo Red Chili Salsa, [Fajita Vegetables...       11.75   \n",
-       "...                                                 ...         ...   \n",
-       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...       11.75   \n",
-       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...       11.75   \n",
-       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...       11.25   \n",
-       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...        8.75   \n",
-       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...        8.75   \n",
+       "                                     choice_description  item_price  \n",
+       "1                                          [Clementine]        3.39  \n",
+       "2                                               [Apple]        3.39  \n",
+       "4     [Tomatillo-Red Chili Salsa (Hot), [Black Beans...       16.98  \n",
+       "5     [Fresh Tomato Salsa (Mild), [Rice, Cheese, Sou...       10.98  \n",
+       "7     [Tomatillo Red Chili Salsa, [Fajita Vegetables...       11.75  \n",
+       "...                                                 ...         ...  \n",
+       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...       11.75  \n",
+       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...       11.75  \n",
+       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...       11.25  \n",
+       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...        8.75  \n",
+       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...        8.75  \n",
        "\n",
-       "         total_price  item-price  \n",
-       "1             $3.39         3.39  \n",
-       "2             $3.39         3.39  \n",
-       "4     $16.98 $16.98        16.98  \n",
-       "5            $10.98        10.98  \n",
-       "7            $11.75        11.75  \n",
-       "...              ...         ...  \n",
-       "4617         $11.75        11.75  \n",
-       "4618         $11.75        11.75  \n",
-       "4619         $11.25        11.25  \n",
-       "4620          $8.75         8.75  \n",
-       "4621          $8.75         8.75  \n",
-       "\n",
-       "[3376 rows x 7 columns]"
+       "[3376 rows x 5 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -770,6 +733,33 @@
     "plt.xticks(rotation=45, ha = 'right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "item_name\n",
+       "Chips and Fresh Tomato Salsa    44.25\n",
+       "Carnitas Bowl                   35.25\n",
+       "Chicken Burrito                 35.00\n",
+       "Veggie Burrito                  33.75\n",
+       "Chicken Bowl                    32.94\n",
+       "Name: item_price, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top5=chipotle_data.groupby('item_name')['item_price'].max().sort_values(ascending=False).head(5)\n",
+    "top5"
    ]
   },
   {
