--- a/Data Science Tutorial.ipynb
+++ b/Data Science Tutorial.ipynb
@@ -732,7 +732,9 @@
     "plt.ylabel(\"Item Price ($)\")\n",
     "plt.xticks(rotation=45, ha = 'right')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#notice what is wrong here?"
    ]
   },
   {
@@ -758,6 +760,7 @@
     }
    ],
    "source": [
+    "#why is the most expensive item chips and salsa? any guesses?\n",
     "top5=chipotle_data.groupby('item_name')['item_price'].max().sort_values(ascending=False).head(5)\n",
     "top5"
    ]
